--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rutube - Надёжный доступ к YouTube</title>
+    <title>Youtube-Ru - Надёжный доступ к YouTube</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
                     <svg class="logo-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8 5v14l11-7L8 5z" fill="currentColor"/>
                     </svg>
-                    <span>Rutube</span>
+                    <span>Youtube-Ru</span>
                 </div>
                 <nav class="nav">
                     <a href="#how">Как работает</a>
@@ -48,12 +48,11 @@
                         Работает без VPN, не требует регистрации и полностью бесплатно.
                     </p>
                     <div class="hero-actions">
-                        <a href="Rutube.apk" download class="btn btn-primary">
+                        <a href="Youtube-Ru.apk" download class="btn btn-primary">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                                 <path d="M10 2v10m0 0l3-3m-3 3l-3-3M4 16h12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                             </svg>
                             Скачать приложение
-                            <span class="file-size">12 МБ</span>
                         </a>
                         <a href="#how" class="btn btn-outline">Подробнее</a>
                     </div>
@@ -232,7 +231,7 @@
                         </svg>
                     </button>
                     <div class="faq-answer">
-                        <p>Да, Rutube абсолютно безопасен. Приложение не нарушает законодательство, не собирает личные данные и использует официальные YouTube API. Все файлы проверены антивирусом.</p>
+                        <p>Да, Youtube-Ru абсолютно безопасен. Приложение не нарушает законодательство, не собирает личные данные и использует официальные YouTube API. Все файлы проверены антивирусом.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -243,7 +242,7 @@
                         </svg>
                     </button>
                     <div class="faq-answer">
-                        <p>Нет, Rutube работает без VPN. Приложение использует специальные методы для обхода блокировок и обеспечивает стабильное соединение.</p>
+                        <p>Нет, Youtube-Ru работает без VPN. Приложение использует специальные методы для обхода блокировок и обеспечивает стабильное соединение.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -254,7 +253,7 @@
                         </svg>
                     </button>
                     <div class="faq-answer">
-                        <p>Сейчас Rutube доступен только для Android-устройств. Версия для iOS находится в разработке и будет выпущена в ближайшее время.</p>
+                        <p>Сейчас Youtube-Ru доступен только для Android-устройств. Версия для iOS находится в разработке и будет выпущена в ближайшее время.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -276,7 +275,7 @@
                         </svg>
                     </button>
                     <div class="faq-answer">
-                        <p>Rutube полностью бесплатен и не содержит рекламы. Мы не монетизируем приложение за счёт пользователей.</p>
+                        <p>Youtube-Ru полностью бесплатен и не содержит рекламы. Мы не монетизируем приложение за счёт пользователей.</p>
                     </div>
                 </div>
             </div>
@@ -289,17 +288,17 @@
             <div class="cta-wrapper">
                 <div class="cta-content">
                     <h2>Начните смотреть<br>прямо сейчас</h2>
-                    <p>Установите Rutube и получите полный доступ к YouTube без ограничений</p>
-                    <a href="Rutube.apk" download class="btn btn-primary btn-large">
+                    <p>Установите Youtube-Ru и получите полный доступ к YouTube без ограничений</p>
+                    <a href="Youtube-Ru.apk" download class="btn btn-primary btn-large">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M10 2v10m0 0l3-3m-3 3l-3-3M4 16h12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                         </svg>
-                        Скачать Rutube
+                        Скачать Youtube-Ru
                     </a>
                     <div class="cta-info">
-                        <span>✓ Размер файла: 12 МБ</span>
                         <span>✓ Для Android 5.0+</span>
                         <span>✓ Установка 2 минуты</span>
+                        <span>✓ Без регистрации</span>
                     </div>
                 </div>
             </div>
@@ -314,7 +313,7 @@
                     <svg class="logo-icon" viewBox="0 0 24 24" fill="none">
                         <path d="M8 5v14l11-7L8 5z" fill="currentColor"/>
                     </svg>
-                    <span>Rutube</span>
+                    <span>Youtube-Ru</span>
                 </div>
                 <div class="footer-links">
                     <a href="#how">Как работает</a>
@@ -323,7 +322,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2026 Rutube. Приложение создано для личного использования.</p>
+                <p>© 2026 Youtube-Ru. Приложение создано для личного использования.</p>
             </div>
         </div>
     </footer>
