--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube-Ru - Надёжный доступ к YouTube</title>
+    <title>YouTubeRu - Надёжный доступ к YouTube</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
                     <svg class="logo-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8 5v14l11-7L8 5z" fill="currentColor"/>
                     </svg>
-                    <span>Youtube-Ru</span>
+                    <span>YouTubeRu</span>
                 </div>
                 <nav class="nav">
                     <a href="#how">Как работает</a>
@@ -48,7 +48,7 @@
                         Работает без VPN, не требует регистрации и полностью бесплатно.
                     </p>
                     <div class="hero-actions">
-                        <a href="Youtube-Ru.apk" download class="btn btn-primary">
+                        <a href="YouTubeRu.apk" download class="btn btn-primary">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                                 <path d="M10 2v10m0 0l3-3m-3 3l-3-3M4 16h12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                             </svg>
@@ -110,7 +110,7 @@
         <div class="container">
             <div class="section-title-wrapper">
                 <h2>Три простых шага</h2>
-                <p>Начните пользоваться FreeTube за 2 минуты</p>
+                <p>Начните пользоваться YouTubeRu за 2 минуты</p>
             </div>
             <div class="steps-grid">
                 <div class="step-card">
@@ -141,7 +141,7 @@
                         </svg>
                     </div>
                     <h3>Пользуйтесь</h3>
-                    <p>Запустите FreeTube и наслаждайтесь просмотром без ограничений и VPN</p>
+                    <p>Запустите YouTubeRu и наслаждайтесь просмотром без ограничений и VPN</p>
                 </div>
             </div>
         </div>
@@ -151,7 +151,7 @@
     <section id="benefits" class="benefits-section">
         <div class="container">
             <div class="section-title-wrapper">
-                <h2>Почему выбирают FreeTube</h2>
+                <h2>Почему выбирают YouTubeRu</h2>
                 <p>Всё необходимое для комфортного просмотра</p>
             </div>
             <div class="benefits-grid">
@@ -220,7 +220,7 @@
         <div class="container">
             <div class="section-title-wrapper">
                 <h2>Ответы на вопросы</h2>
-                <p>Всё что нужно знать о FreeTube</p>
+                <p>Всё что нужно знать о YouTubeRu</p>
             </div>
             <div class="faq-container">
                 <div class="faq-item">
@@ -231,7 +231,7 @@
                         </svg>
                     </button>
                     <div class="faq-answer">
-                        <p>Да, Youtube-Ru абсолютно безопасен. Приложение не нарушает законодательство, не собирает личные данные и использует официальные YouTube API. Все файлы проверены антивирусом.</p>
+                        <p>Да, YouTubeRu абсолютно безопасен. Приложение не нарушает законодательство, не собирает личные данные и использует официальные YouTube API. Все файлы проверены антивирусом.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -242,7 +242,7 @@
                         </svg>
                     </button>
                     <div class="faq-answer">
-                        <p>Нет, Youtube-Ru работает без VPN. Приложение использует специальные методы для обхода блокировок и обеспечивает стабильное соединение.</p>
+                        <p>Нет, YouTubeRu работает без VPN. Приложение использует специальные методы для обхода блокировок и обеспечивает стабильное соединение.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -253,7 +253,7 @@
                         </svg>
                     </button>
                     <div class="faq-answer">
-                        <p>Сейчас Youtube-Ru доступен только для Android-устройств. Версия для iOS находится в разработке и будет выпущена в ближайшее время.</p>
+                        <p>Сейчас YouTubeRu доступен только для Android-устройств. Версия для iOS находится в разработке и будет выпущена в ближайшее время.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -275,7 +275,7 @@
                         </svg>
                     </button>
                     <div class="faq-answer">
-                        <p>Youtube-Ru полностью бесплатен и не содержит рекламы. Мы не монетизируем приложение за счёт пользователей.</p>
+                        <p>YouTubeRu полностью бесплатен и не содержит рекламы. Мы не монетизируем приложение за счёт пользователей.</p>
                     </div>
                 </div>
             </div>
@@ -288,12 +288,12 @@
             <div class="cta-wrapper">
                 <div class="cta-content">
                     <h2>Начните смотреть<br>прямо сейчас</h2>
-                    <p>Установите Youtube-Ru и получите полный доступ к YouTube без ограничений</p>
-                    <a href="Youtube-Ru.apk" download class="btn btn-primary btn-large">
+                    <p>Установите YouTubeRu и получите полный доступ к YouTube без ограничений</p>
+                    <a href="YouTubeRu.apk" download class="btn btn-primary btn-large">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M10 2v10m0 0l3-3m-3 3l-3-3M4 16h12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                         </svg>
-                        Скачать Youtube-Ru
+                        Скачать YouTubeRu
                     </a>
                     <div class="cta-info">
                         <span>✓ Для Android 5.0+</span>
@@ -313,7 +313,7 @@
                     <svg class="logo-icon" viewBox="0 0 24 24" fill="none">
                         <path d="M8 5v14l11-7L8 5z" fill="currentColor"/>
                     </svg>
-                    <span>Youtube-Ru</span>
+                    <span>YouTubeRu</span>
                 </div>
                 <div class="footer-links">
                     <a href="#how">Как работает</a>
@@ -322,7 +322,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2026 Youtube-Ru. Приложение создано для личного использования.</p>
+                <p>© 2026 YouTubeRu. Приложение создано для личного использования.</p>
             </div>
         </div>
     </footer>
